--- a/NotesApp3/FirstView/Main.storyboard
+++ b/NotesApp3/FirstView/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="WG4-yy-0X8">
             <objects>
-                <viewController id="N0w-tz-uFn" customClass="ViewController" customModule="NotesApp3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="N0w-tz-uFn" customClass="MainViewController" customModule="NotesApp3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ESS-a1-0VO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -19,6 +19,11 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Notes" id="SGx-Gb-SnP">
+                                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="IQh-Xi-bGd">
+                                            <connections>
+                                                <action selector="logOutButton:" destination="N0w-tz-uFn" id="Emp-4A-nx4"/>
+                                            </connections>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Q2u-31-tLD">
                                             <connections>
                                                 <action selector="addNotesButton:" destination="N0w-tz-uFn" id="qdA-Lr-2b3"/>
@@ -31,7 +36,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="788"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="OgZ-QW-Ihw">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="80" id="OgZ-QW-Ihw">
                                         <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OgZ-QW-Ihw" id="62I-yt-6VQ">
