--- a/NotesApp3/ViewControllers/FirstView/MainViewController.storyboard
+++ b/NotesApp3/ViewControllers/FirstView/MainViewController.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--MainViewController-->
         <scene sceneID="WG4-yy-0X8">
             <objects>
-                <viewController id="N0w-tz-uFn" customClass="MainViewController" customModule="NotesApp3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" title="MainViewController" id="N0w-tz-uFn" customClass="MainViewController" customModule="NotesApp3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ESS-a1-0VO">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
