--- a/NotesApp3/Base.lproj/LaunchScreen.storyboard
+++ b/NotesApp3/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -16,7 +16,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="NoteBooks" translatesAutoresizingMaskIntoConstraints="NO" id="3DZ-ng-Tzc">
-                                <rect key="frame" x="87" y="272" width="240" height="266"/>
+                                <rect key="frame" x="87" y="52" width="240" height="526"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="oQc-5H-tXO"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="oQc-5H-tXO"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="oQc-5H-tXO"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note It Down!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hb5-Gv-BLr">
                                 <rect key="frame" x="112" y="618" width="190" height="24"/>
@@ -28,22 +41,27 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="8NO-Ft-1Xc" firstAttribute="trailing" secondItem="Hb5-Gv-BLr" secondAttribute="trailing" constant="112" id="6Iv-TP-QRk"/>
-                            <constraint firstItem="3DZ-ng-Tzc" firstAttribute="top" secondItem="8NO-Ft-1Xc" secondAttribute="top" constant="228" id="B6h-Xj-mwE"/>
+                            <constraint firstItem="3DZ-ng-Tzc" firstAttribute="top" secondItem="8NO-Ft-1Xc" secondAttribute="top" constant="8" id="B6h-Xj-mwE"/>
                             <constraint firstItem="3DZ-ng-Tzc" firstAttribute="leading" secondItem="8NO-Ft-1Xc" secondAttribute="leading" constant="87" id="IEW-Za-XBj"/>
                             <constraint firstItem="8NO-Ft-1Xc" firstAttribute="trailing" secondItem="3DZ-ng-Tzc" secondAttribute="trailing" constant="87" id="KHA-CK-bCM"/>
-                            <constraint firstItem="Hb5-Gv-BLr" firstAttribute="top" secondItem="3DZ-ng-Tzc" secondAttribute="bottom" constant="80" id="kLf-ij-SFA"/>
+                            <constraint firstItem="Hb5-Gv-BLr" firstAttribute="top" secondItem="3DZ-ng-Tzc" secondAttribute="bottom" constant="40" id="kLf-ij-SFA"/>
                             <constraint firstItem="8NO-Ft-1Xc" firstAttribute="bottom" secondItem="Hb5-Gv-BLr" secondAttribute="bottom" constant="220" id="nJZ-WH-a87"/>
                             <constraint firstItem="Hb5-Gv-BLr" firstAttribute="leading" secondItem="8NO-Ft-1Xc" secondAttribute="leading" constant="112" id="rqH-Vb-95D"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8NO-Ft-1Xc"/>
+                        <variation key="heightClass=compact-widthClass=regular">
+                            <mask key="constraints">
+                                <exclude reference="nJZ-WH-a87"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="51.5625" y="373.91304347826087"/>
         </scene>
     </scenes>
     <resources>
-        <image name="NoteBooks" width="86.5" height="93"/>
+        <image name="NoteBooks" width="86.666664123535156" height="93.333335876464844"/>
     </resources>
 </document>
