--- a/NotesApp3/Cells/CustomQuizCell/QuizQuestionCell.xib
+++ b/NotesApp3/Cells/CustomQuizCell/QuizQuestionCell.xib
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -8,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="294" id="GuW-2c-z1P" customClass="QuizQuestionViewCell" customModule="NotesApp3" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="294" id="GuW-2c-z1P" customClass="QuizQuestionCell" customModule="NotesApp3" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="435" height="294"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GuW-2c-z1P" id="8NH-hw-Gce">
@@ -26,7 +25,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXl-nE-r2P">
-                        <rect key="frame" x="95" y="132" width="120" height="50"/>
+                        <rect key="frame" x="90" y="132" width="120" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="Bkg-y7-Ht2"/>
                             <constraint firstAttribute="width" constant="120" id="deR-ve-fwD"/>
@@ -37,7 +36,7 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ksf-Yp-ero">
-                        <rect key="frame" x="295" y="132" width="120" height="50"/>
+                        <rect key="frame" x="290" y="132" width="120" height="50"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="15" maxY="0.0"/>
                         <state key="normal" title="Option 2" image="checkBoxOUTLINE ">
                             <color key="titleColor" red="0.14425283670425415" green="0.20073485374450684" blue="0.70878493785858154" alpha="0.99607849120000003" colorSpace="custom" customColorSpace="sRGB"/>
